--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "@supabase/supabase-js": "^2.55.0",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
-    "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -18,6 +17,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:coverage": "react-scripts test --coverage --watchAll=false",
+    "test:ci": "CI=true react-scripts test --coverage --watchAll=false --verbose",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -38,7 +39,26 @@
       "last 1 safari version"
     ]
   },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx}",
+      "!src/index.js",
+      "!src/utils/reportWebVitals.js",
+      "!src/testing/**",
+      "!src/**/*.test.js"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 60,
+        "functions": 60,
+        "lines": 60,
+        "statements": 60
+      }
+    }
+  },
   "devDependencies": {
+    "@testing-library/react": "^13.4.0",
+    "jest-canvas-mock": "^2.5.2",
     "supabase": "^2.34.3"
   }
 }
