--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/user-event": "^13.5.0",
+    "csv-parser": "^3.2.0",
+    "json2csv": "^6.0.0-alpha.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
