--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "react-simple-maps": "^3.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "world-countries": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
