--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "test:coverage": "react-scripts test --coverage --watchAll=false",
     "test:ci": "CI=true react-scripts test --coverage --watchAll=false --verbose",
     "eject": "react-scripts eject",
-    "typecheck": "tsc --noEmit"
+    "lint": "eslint 'src/**/*.{js,jsx}' --quiet"
   },
   "browserslist": {
     "production": [
@@ -56,18 +56,7 @@
   },
   "devDependencies": {
     "@testing-library/react": "^13.4.0",
-    "@types/jest": "^30.0.0",
-    "@types/node": "^24.3.0",
-    "@types/react": "^19.1.12",
-    "@types/react-dom": "^19.1.9",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.2.0",
     "jest-canvas-mock": "^2.5.2",
-    "supabase": "^2.34.3",
-    "typescript": "^5.9.2"
+    "supabase": "^2.34.3"
   }
 }
