--- a/package.json
+++ b/package.json
@@ -56,6 +56,9 @@
   },
   "devDependencies": {
     "@testing-library/react": "^13.4.0",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "jest-canvas-mock": "^2.5.2",
     "supabase": "^2.34.3"
   }
