--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "test": "react-scripts test",
     "test:coverage": "react-scripts test --coverage --watchAll=false",
     "test:ci": "CI=true react-scripts test --coverage --watchAll=false --verbose",
-    "eject": "react-scripts eject",
-    "lint": "eslint 'src/**/*.{js,jsx}' --quiet"
+    "eject": "react-scripts eject"
   },
   "browserslist": {
     "production": [
@@ -56,10 +55,6 @@
   },
   "devDependencies": {
     "@testing-library/react": "^13.4.0",
-    "babel-eslint": "^10.1.0",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "jest-canvas-mock": "^2.5.2",
     "supabase": "^2.34.3"
