--- a/package.json
+++ b/package.json
@@ -55,8 +55,8 @@
   },
   "devDependencies": {
     "@testing-library/react": "^13.4.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
     "jest-canvas-mock": "^2.5.2",
-    "supabase": "^2.34.3"
+    "supabase": "^2.34.3",
+    "eslint-plugin-react-hooks": "^4.6.0"
   }
 }
