--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/user-event": "^13.5.0",
+    "@vercel/analytics": "^1.5.0",
     "csv-parser": "^3.2.0",
     "json2csv": "^6.0.0-alpha.2",
     "react": "^18.3.1",
@@ -55,8 +56,8 @@
   },
   "devDependencies": {
     "@testing-library/react": "^13.4.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "jest-canvas-mock": "^2.5.2",
-    "supabase": "^2.34.3",
-    "eslint-plugin-react-hooks": "^4.6.0"
+    "supabase": "^2.34.3"
   }
 }
