--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@vercel/analytics": "^1.5.0",
     "csv-parser": "^3.2.0",
     "json2csv": "^6.0.0-alpha.2",
+    "libphonenumber-js": "^1.12.33",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
